fix : contect us form phone input alignment

--- a/style.css
+++ b/style.css
@@ -451,10 +451,18 @@ nav{
 }
 
 .form{
-    margin-top: 30px;
+    margin-top: 1.5rem;
     flex-basis: 55%;
     justify-content: center;
-    margin-left: 3vw;
+    margin-left: 1rem;
+}
+
+.contact-form{
+    display: flex;
+    flex-direction: column;
+    margin-right: 10px;
+    padding-left: 15rem;
+    padding-bottom: 2rem;
 }
 
 .form input,textarea{
